# yacutest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.rst  appveyor.yml  coverage.xml
.devcontainer/: Dockerfile  devcontainer.json
dev/: coverage.sh
example/: CMakeLists.txt  build_and_run_tests.sh
example/src/: CMakeLists.txt  calculator.c  calculator.h
example/tests/: CMakeLists.txt  tests.c
src/: CMakeLists.txt  yacu.c  yacu.h
tests4tests/: CMakeLists.txt  assertions.c  assertions.h  common.c  common.h  failures.c  failures.h  others.c  others.h  tests.c
